error handeling implemented
