# src/handlers/user.go
@@ -25,14 +25,14 @@ func NewUserControler() *UserControler {
 // @Accept json
 // @Produce json
 // @Success 200 {array} types.ResponseUser "List of users"
-// @Failure 400 {object} map[string]string "Bad request error"
+// @Failure 400 {object} ErrorResponse "Bad request error"
 // @Security BearerAuth
-// @Router /users [get]
+// @Router /users/list [get]
 func (cl *UserControler) ListUserHandler(c *gin.Context) {
 
 	user, err := cl.UserRepository.ListUser(c)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "bad request!"})
+		ErrBadRequest(c, err.Error())
 		return
 	}
 	response := types.UsersToUserResponses(user)
@@ -46,8 +46,7 @@ func (cl *UserControler) ListUserHandler(c *gin.Context) {
 // @Produce json
 // @Param id path string true "User ID"
 // @Success 200 {object} types.ResponseUser "User details"
-// @Failure 404 {object} map[string]string "User not found error"
-// @Failure 401 {object} map[string]string "Unauthorized error"
+// @Failure 404 {object} ErrorResponse "User not found error"
 // @Security BearerAuth
 // @Router /users/{id} [get]
 func (cl *UserControler) GetUserHandler(c *gin.Context) {
@@ -56,7 +55,7 @@ func (cl *UserControler) GetUserHandler(c *gin.Context) {
 	user, err := cl.UserRepository.GetUserByID(c, id)
 
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found!"})
+		ErrRecordNotFound(c, err.Error())
 		return
 	}
 	response := types.UsersToUserResponses(user)
@@ -72,32 +71,33 @@ func (cl *UserControler) GetUserHandler(c *gin.Context) {
 // @Produce json
 // @Param user body types.CreateUserParams true "User data"
 // @Success 200 {object} types.ResponseUser "Created user details"
-// @Failure 400 {object} map[string]string "Bad request error"
-// @Failure 500 {object} map[string]string "Internal server error"
+// @Failure 400 {object} ErrorResponse "Bad request error"
+// @Failure 500 {object} ErrorResponse "Internal server error"
+// @Failure 404 {object} ErrorResponse "Record not found"
 // @Security BearerAuth
 // @Router /users [post]
 func (cl *UserControler) InsertUserHandler(c *gin.Context) {
 	var params types.CreateUserParams
 
 	if err := c.BindJSON(&params); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		ErrBadRequest(c, err.Error())
 		return
 	}
 
 	if validationErrors := params.Validate(); len(validationErrors) > 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "validation failed", "details": validationErrors})
+		ErrValidationFailed(c, validationErrors)
 		return
 	}
 
 	user, err := types.NewUserFromParams(params)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		ErrBadRequest(c, err.Error())
 		return
 	}
 
 	insertedUser, err := cl.UserRepository.CreateUser(c, *user)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to insert user", "details": err.Error()})
+		ErrRecordNotFound(c, err.Error())
 		return
 	}
 
@@ -114,7 +114,7 @@ func (cl *UserControler) InsertUserHandler(c *gin.Context) {
 // @Produce json
 // @Param id path string true "User ID"
 // @Success 204 "User deleted successfully"
-// @Failure 404 {object} map[string]string "User not found or failed to delete"
+// @Failure 404 {object} ErrorResponse "User not found or failed to delete"
 // @Security BearerAuth
 // @Router /users/{id} [delete]
 func (cl *UserControler) DeleteUserHandler(c *gin.Context) {
@@ -124,20 +124,16 @@ func (cl *UserControler) DeleteUserHandler(c *gin.Context) {
 	_, err := cl.UserRepository.GetUserByID(c, id)
 
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error":   "user not found!",
-			"details": err.Error(),
-		})
+		ErrRecordNotFound(c, err.Error())
 		return
 	}
 
 	err = cl.UserRepository.DeleteUser(c, id)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"err":     "failed to find the user",
-			"details": err.Error(),
-		})
+		ErrRecordNotFound(c, err.Error())
 	}
+
+	c.JSON(http.StatusNoContent, gin.H{"success": "deleted successfuly"})
 }
 
 // @Summary Update a user's username
@@ -147,9 +143,9 @@ func (cl *UserControler) DeleteUserHandler(c *gin.Context) {
 // @Produce json
 // @Param id path string true "User ID"
 // @Param username body types.UpdateUsernameParams true "New username"
-// @Success 202 {object} map[string]string "Username updated successfully"
-// @Failure 400 {object} map[string]string "Invalid request or bad user ID"
-// @Failure 500 {object} map[string]string "Failed to update username"
+// @Success 202 {object} map[string]interface{} "Username updated successfully"
+// @Failure 400 {object} ErrorResponse "Invalid request or bad user ID"
+// @Failure 404 {object} ErrorResponse "Record not found"
 // @Security BearerAuth
 // @Router /users/{id}/username [put]
 func (cl *UserControler) UpdateUsernameHandler(c *gin.Context) {
@@ -157,18 +153,18 @@ func (cl *UserControler) UpdateUsernameHandler(c *gin.Context) {
 
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		ErrBadRequest(c, err.Error())
 		return
 	}
 
 	if err := c.BindJSON(&params); err != nil {
-		c.JSON(http.StatusBadRequest, err)
+		ErrBadRequest(c, err.Error())
 		return
 	}
 
 	err = cl.UserRepository.UpdateUsername(params.Username, uint(id))
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to update username"})
+		ErrRecordNotFound(c, err.Error())
 		return
 	}
 
